<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.DetailActivity">

    <ProgressBar
        android:id="@+id/progressDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgPrimary">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/wave" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.github.florent37.shapeofview.shapes.CircleView
                    android:id="@+id/shapeViewCircle"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    app:shape_circle_borderColor="@android:color/black"
                    app:shape_circle_borderWidth="0.2dp">

                    <ImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        tools:src="@drawable/ic_baseline_account_circle_24"/>

                </com.github.florent37.shapeofview.shapes.CircleView>


                <TextView
                    android:id="@+id/txt_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:fontFamily="@font/quicksand"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:fontFamily="@font/quicksand"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:fontFamily="@font/quicksand"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="10dp"
                    android:background="@color/white"
                    android:elevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="15dp">

                        <!--                         Follower-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:textSize="15sp"
                                android:fontFamily="@font/quicksand"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_follower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower_placeholder"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/blackPrimary"
                                android:fontFamily="@font/comfortaa"/>
                        </LinearLayout>

                        <!--                         following-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="15sp"
                                android:fontFamily="@font/quicksand"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following_placeholder"
                                android:textColor="@color/blackPrimary"
                                android:fontFamily="@font/comfortaa"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <!--                         Follower-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Repository"
                                android:textSize="15sp"
                                android:textAllCaps="true"
                                android:fontFamily="@font/quicksand"/>

                            <TextView
                                android:id="@+id/txt_repo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/blackPrimary"
                                android:fontFamily="@font/comfortaa"/>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            app:tabRippleColor="@color/greylight"
            app:tabSelectedTextColor="@color/blackPrimary"
            app:tabIndicatorColor="@color/blackPrimary"
            app:tabIndicatorFullWidth="false"
            android:background="@color/bgPrimary"
            app:tabTextColor="@color/greylight">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_1"
                android:icon="@drawable/following"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_2"
                android:icon="@drawable/follower"
                />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:background="@color/bgPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_gravity="end|bottom"
        android:background="@color/bgPrimary"
        android:layout_marginEnd="10dp"
        android:elevation="4dp"
        android:layout_marginBottom="10dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>