<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.9"
                android:background="@drawable/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/shapeViewCircle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:shape_circle_borderColor="@android:color/black"
                app:shape_circle_borderWidth="0.2dp">

                <ImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:src="@drawable/bg_user"/>

            </com.github.florent37.shapeofview.shapes.CircleView>

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/bgPrimary"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:tint="@color/bgPrimary"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorShimmer"
                android:background="@drawable/bg_text_shimmer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shapeViewCircle"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorShimmer"
                android:background="@drawable/bg_text_shimmer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/bg_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_username"
                tools:text="@string/location"
                android:textColor="@color/colorShimmer"
                android:background="@drawable/bg_text_shimmer"/>

            <TextView
                android:id="@+id/txt_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/bg_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_location"
                tools:text="@string/blog"
                android:textColor="@color/colorShimmer"
                android:background="@drawable/bg_text_shimmer"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.2"
                android:src="@drawable/octocat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            app:tabRippleColor="@color/greylight"
            app:tabSelectedTextColor="@color/blackPrimary"
            app:tabIndicatorColor="@color/blackPrimary"
            app:tabIndicatorFullWidth="false"
            app:tabTextColor="@color/greylight">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_1"
                android:icon="@drawable/following"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_2"
                android:icon="@drawable/follower"
                />

        </com.google.android.material.tabs.TabLayout>


    </LinearLayout>

</com.facebook.shimmer.ShimmerFrameLayout>